--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body{
     max-width: 500px;
     width: 100%;
     background: #fff;
-    margin: 20px auto;
+    margin: 90px auto;
     padding: 30px;
     box-shadow: 1px, 1px, 2px rgba(0,0,0,0.125);
 }
@@ -37,10 +37,17 @@ body{
 .wrapper #title{
     font-size: 24px;
     font-weight: 700;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
     color: var(--accent);
     text-transform: uppercase;
     text-align: center;
+}
+
+.wrapper p{
+    color: #757575;
+    font-size: 13px;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 .wrapper form{
@@ -76,3 +83,46 @@ body{
     height: 125px;
 }
 
+wrapper form .input_field input:focus,
+wrapper form .input_field textarea:focus{
+    border: 1px solid var(--accentHover);
+}
+
+.wrapper form .input_field p{
+    font-size: 14px;
+    color: #757575;
+}
+
+.btn{
+    width: 100%;
+    padding: 8px 10px;
+    border: 0;
+    background: var(--accent);
+    color: #fff;
+    cursor: pointer;
+    border-radius: 3px;
+    outline: none;
+}
+
+.wrapper form .input_field:last-child{
+    margin-bottom: 0;
+}
+
+.btn:hover{
+    background: var(--accentHover);
+}
+
+
+/* --- Media Querries */
+
+@media (max-width: 420px) {
+    .wrapper form .input_field{
+        flex-direction: column;
+        align-items: flex-start;    
+    }
+
+    .wrapper form .input_field label{
+        margin-bottom: 5px;
+    }
+    
+}
